<resources>
  <string name="app_name">야미스토리</string>
  <string name="map_api_key">0pX3qXUw7p4qWb5gpJODRX-M1P6XWkmmJ6BNjQg</string>
  <string name="server_domain">https://api.yummystory.com/</string>
  <string name="client_id">fcdfa51a14</string>
  <string name="client_secret">331d96e8ac924cab59b314d134645b</string>
  <string name="exception_InternalServerMatjiException">서버 오류입니다. 관리자에게 문의하세요.</string>
  <string name="exception_GpsAvailableMatjiException">GPS가 정상작동 합니다.</string>
  <string name="exception_GpsEnabledMatjiException">GPS 서비스를 사용할 수 있습니다.</string>
  <string name="exception_GpsOutOfServiceMatjiException">GPS 서비스 지역에서 벗어났습니다.</string>
  <string name="exception_GpsServiceNotPossibleMatjiException">
    GPS 사용이 불가능합니다. 하늘을 볼 수 있거나, 네트워크가 안정적인 곳에서 다시 로딩해 주세요.
  </string>
  <string name="exception_GpsTemporarilyUnavailableMatjiException">
    내부 문제로, GPS를 일시적으로 중지합니다. 잠시만 기다려주세요.
  </string>
  <string name="exception_HttpConnectMatjiException">
    접속상태가 좋지 않습니다. 접속상태를 확인하세요.
  </string>
  <string name="exception_InterruptedMatjiException">
    Interrupted Exception: 연산을 중지합니다.
  </string>
  <string name="exception_NotPossibleMatjiException">
    일어날 수 없는 행동입니다.
  </string>
  <string name="exception_JSONCodeMatjiException">
    JSON리턴 결과가 올바르지 않습니다.
  </string>
  <string name="exception_JSONMatjiException">
    JSON Parsing Error
  </string>
  <string name="exception_NotSupportedMatjiException">
    지원하지 않는 기능입니다.
  </string>
  <string name="exception_UseNetworkGpsMatjiException">
    GPS수신이 불안정합니다. 네트워크로 현재 위치를 추정합니다.
  </string>
  <string name="exception_GeocodeLocationInvalidMatjiException">
        해당 위치는 주소를 받아올 수 없는 지역입니다.
  </string>
  <string name="exception_GeocodeSearchInvalidMatjiException">
        주소 검색이 올바르지 않습니다.
  </string>
  <string name="exception_GeocodeZeroResultMatjiException">
        검색 결과가 없습니다.
  </string>
  <string name="exception_RegistStoreNameInvalidMatjiException">
        맛집 이름을 입력해 주세요.
  </string>
  <string name="exception_store_address_is_null">
        주소 입력이 잘못되었습니다. 
  </string>
  <string name="exception_WritePostMatjiException">
        내부 오류로 인해 이야기가 제대로 등록되지 않았습니다.
  </string>
  <string name="exception_BitmapCompressMatjiException">
        내부 문제로 이미지가 압축되지 않습니다.
  </string>
  <string name="exception_BitmapCompressIOMatjiException">
        이미지 압축 대상 파일을 생성할 수 없습니다.
  </string>
  <string name="exception_InvalidPasswordMatjiException">
        아이디 또는 비밀번호를 확인해주세요.
  </string>
  <string name="exception_EmailNotExistMatjiException">
        존재하지 않는 이메일입니다.
  </string>
  <string name="exception_DuplicatedStoreFoodMatjiException">
        이미 등록된 메뉴입니다.
  </string>
  <string name="exception_DuplicatedNicknameMatjiException">
        중복되는 닉네임입니다.
  </string>
  <string name="exception_DuplicatedEmailMatjiException">
        중복되는 이메일입니다.
  </string>
  <string name="exception_NotVerifiedEmailMatjiException">
        검증되지 않은 이메일입니다.
  </string>
  <string name="exception_InvalidEmailFormMatjiException">
        이메일이 올바르지 않습니다.
  </string>
  <string name="exception_UseridNotExistMatjiException">
        존재하지 않는 아이디입니다.
  </string>
  <string name="exception_failed_to_save_region">
            이미 북마크 한 지역입니다.
  </string>
  <string name="session_onlogin">로그인 중입니다...</string>
  <string name="pull_to_refresh_pull_label">당겨서 새로고침</string>
  <string name="pull_to_refresh_release_label">손을 떼면 새로 고침</string>
  <string name="pull_to_refresh_refreshing_label">불러오는 중...</string>
  <string name="pull_to_refresh_tap_label">눌러서 새로고침</string>
  <string name="default_string_market_address">market://search?q=맛있는지도</string>
  <string name="default_string_matji_email">matji@yummystory.com</string>
  <string name="default_string_guest">비회원</string>
  <string name="default_string_nickname">닉네임</string>
  <string name="default_string_website">웹사이트</string>
  <string name="default_string_check_delete">삭제할까요?</string>
  <string name="default_string_do_not_show_again">이 창을 다시 보지 않기</string>
  <string name="default_string_close">닫기</string>
  <string name="default_string_tag">태그</string>
  <string name="default_string_intro_other">%1$s의 맛집기행</string>
  <string name="default_string_intro">소개글</string>
  <string name="default_string_basic_info">소개</string>
  <string name="default_string_more_info">부가정보</string>
  <string name="default_string_info">정보</string>
  <string name="default_string_popular_food">인기메뉴</string>
  <string name="default_string_notice">공지사항</string>
  <string name="default_string_reg_user">발굴자</string>
  <string name="default_string_owner_user">주인장</string>
  <string name="default_string_url">관련 URL</string>
  <string name="default_string_memo">이야기</string>
  <string name="default_string_menu">메뉴</string>
  <string name="default_string_comment">댓글</string>
  <string name="default_string_like">좋아요!</string>
  <string name="default_string_unlike">좋아요! 취소</string>
  <string name="default_string_image">이미지</string>
  <string name="default_string_map">지도</string>
  <string name="default_string_store">맛집</string>
  <string name="default_string_alarm">알림</string>
  <string name="default_string_notification">알림</string>
  <string name="default_string_search">검색</string>
  <string name="default_string_write_note">영업시간, 예약 여부 등 이 맛집의 상세 정보를 등록해주세요.</string>
  <string name="default_string_recent_post">등록된 이야기가 없습니다.</string>
  <string name="default_string_bookmark">Bookmark</string>
  <string name="default_string_ranking">Ranking</string>
  <string name="default_string_post">이야기</string>
  <string name="default_string_store_register">Register</string>
  <string name="default_string_current_position">GPS</string>
  <string name="default_string_near_store">Store</string>
  <string name="default_string_settings">설정</string>
  <string name="default_string_address">주소</string>
  <string name="default_string_change">변경</string>
  <string name="default_string_revision">수정</string>
  <string name="default_string_edit">편집</string>
  <string name="default_string_confirm">확인</string>
  <string name="default_string_today">Today</string>
  <string name="default_string_cancel">취소</string>
  <string name="default_string_user">사람</string>
  <string name="default_string_picture">사진</string>
  <string name="default_string_camera">카메라</string>
  <string name="default_string_album">앨범</string>
  <string name="default_string_complete">완료</string>
  <string name="default_string_message">쪽지</string>
  <string name="default_string_login">로그인</string>
  <string name="default_string_register">회원가입</string>
  <string name="default_string_webreview_user">링크</string>
  <string name="default_string_webreview_store">관련글</string>
  <string name="default_string_store_modify_request">정보 수정 요청</string>
  <string name="default_string_store_close">폐업 신고</string>
  <string name="default_string_reload">새로고침</string>
  <string name="default_string_terms">약관</string>
  <string name="default_string_agree">동의</string>
  <string name="not_exist_intro">소개문을 입력해주세요.</string>
  <string name="not_exist_website">홈페이지를 등록해 주세요..</string>
  <string name="not_exist_cover">소개글이 없습니다.</string>
  <string name="not_exist_tel">전화번호를 등록해 주세요.</string>
  <string name="not_exist_email_client_app">이메일 전송 어플리케이션이 존재하지 않습니다.</string>
  <string name="not_exist_tag">태그가 존재하지 않습니다.</string>
  <string name="gps_request_turn_on">GPS를 수신할 수 없습니다. 설정을 켜 주셔야 합니다</string>
  <string name="writing_content_post">이야기를 입력하세요.</string>
  <string name="writing_content_comment">댓글을 입력하세요.</string>
  <string name="writing_content_message">메세지를 입력하세요.</string>
  <string name="writing_content_received_user">받는 사람을 추가하세요.</string>
  <string name="writing_content_menu">메뉴를 입력하세요.</string>
  <string name="writing_content_search">검색할 단어를 입력하세요.</string>
  <string name="writing_content_intro">소개를 입력하세요.</string>
  <string name="post_does_not_exist">이야기가 존재하지 않습니다!</string>
  <string name="does_not_exist_prev_post">이전 이야기가 존재하지 않습니다.</string>
  <string name="does_not_exist_next_post">마지막 이야기입니다.</string>
  <string name="chat_waiting_input">메세지를 입력해주세요.</string>
  <string name="chat_send">보내기</string>
  <string name="target_common">COMMON</string>
  <string name="cell_user_point">포인트</string>
  <string name="cell_user_area">사는 나라</string>
  <string name="cell_user_follow">Follow</string>
  <string name="cell_user_unfollow">Unfollow</string>
  <string name="cell_store_not_exist_tel"> </string>
  <string name="cell_store_not_exist_addr">주소 미등록</string>
  <string name="cell_store_not_exist_tag"> </string>
  <string name="cell_store_not_exist_menu"> </string>
  <string name="cell_user_edit_nickname">닉네임 변경</string>
  <string name="cell_user_edit_userid">계정(이메일)</string>
  <string name="cell_user_edit_usermail">이메일</string>
  <string name="cell_user_edit_img">사진 선택</string>
  <string name="main_tab_map">맛집</string>
  <string name="main_tab_talk">이야기</string>
  <string name="main_tab_ranking">식도락가</string>
  <string name="main_tab_config">설정</string>
  <string name="main_tab_check_finish">야미스토리를 종료하시겠습니까?</string>
  <string name="store_register_add_address">상세주소</string>
  <string name="store_register_name">맛집이름</string>
  <string name="store_register_tel">전화번호</string>
  <string name="store_register_website">홈페이지</string>
  <string name="store_register_submit">맛집 등록하기</string>
  <string name="bookmark_list_register">이곳을 북마크하기</string>
  <string name="bookmark_list_register_hint">북마크 이름을 입력하세요.</string>
  <string name="user_profile_friend_information">친구</string>
  <string name="user_profile_following">Following</string>
  <string name="user_profile_follower">Follower</string>
  <string name="user_profile_store_information">맛집</string>
  <string name="user_profile_find_store">발견맛집</string>
  <string name="user_profile_recent_store">최근 맛집</string>
  <string name="hint_current_password">현재 비밀번호</string>
  <string name="hint_write_password">비밀번호 입력</string>
  <string name="hint_email">이메일</string>
  <string name="hint_nickname">닉네임</string>
  <string name="hint_password">비밀번호</string>
  <string name="hint_password_confirm">비밀번호 확인</string>
  <string name="find_password">비밀번호 찾기</string>
  <string name="find_password_email">가입 시 사용된 이메일을 입력해주세요.</string>
  <string name="find_email">이메일 찾기</string>
  <string name="find_email_userid">가입시 사용된 아이디를 입력해주세요. </string>
  <string name="register_write_email">이메일을 입력해 주세요.</string>
  <string name="register_write_nickname">닉네임을 입력해 주세요. \n12자까지 가능합니다.</string>
  <string name="register_write_password">비밀번호를 입력해 주세요.</string>
  <string name="register_acceptance_of_terms">약관동의</string>
  <string name="register_view_acceptance_of_terms">(약관보기)</string>
  <string name="register_complete">가입완료</string>
  <string name="branding_title">\'맛있는 지도\' 서비스명 변경 안내</string>
  <string name="branding_enforce1">맛있는 지도가 2.0 버전을 출시하면서 서비스명을 야미스토리(YummyStory)로 변경하였습니다.</string>
  <string name="branding_content1">서비스명을 바꾼다는 결정이 쉽지는 않았지만 ‘맛있는 지도’를 글로벌 서비스로 확장하기 위해서 한번은 겪어야 하는 일이라는 판단에 부득이하게 서비스명을 변경하게 되었습니다. 또한 서비스의 기능 및 사용성 개선을 위해 많은 부분이 수정되었음을 알려드립니다. 물론 메모, 찜, 태그 등 그 동안 맛있는 지도에 올려주신 사용자 데이터들은 그대로 보존됩니다.  대표적인 변경사항은 다음과 같습니다.</string>
  <string name="branding_update1">Email로 로그인 (로그인 체계 간소화)</string>
  <string name="branding_update2">아이디를 닉네임으로 사용 (기존의 닉네임을 삭제하고 아이디를 닉네임으로 사용하며 변경 가능)</string>
  <string name="branding_update3">맛집관리를 찜을 ‘좋아요’와 ‘관심맛집’으로 분리</string>
  <string name="branding_update4">맛집 메뉴 등록 및 메뉴 평가 기능 도입</string>
  <string name="branding_update5">이야기(메모)에 댓글 및 이야기 평가 기능 도입</string>
  <string name="branding_update6">친구 기능을 ‘Follwer’와 ‘Follow’로 변경</string>
  <string name="branding_update7">사용자 활동성에 따른 활동순위 노출</string>
  <string name="branding_content2">그외 UI 전면 개편 등 여러가지 면에서 많은 변화가 있습니다. 기존 맛있는 지도 앱과 달라 처음 사용하실 때 다소 불편하실 수도 있지만 이전보다 더 나아졌다는 점을 느끼실 겁니다.\n아울러 트위터, 페이스북 로그인 기능 그리고 트위터, 페이스북 등 외부 서비스의 친구찾기 기능도 업데이트될 예정입니다. 또한 영어, 일본어 언어팩 추가를 시작으로 서비스 언어를 하나씩 늘려나가면서 본격적으로 글로벌 서비스를 시작하려고 합니다.\n그 동안 맛있는 지도를 사랑해주신 여러분들의 변함없는 사랑을 부탁드립니다. 더욱 좋은 서비스로 보답하겠습니다.</string>
  <string name="branding_from">바나나위키 임직원 일동</string>
</resources>