<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activity_register"
	style="@style/DefaultFill"
	android:background="@drawable/bg_01">
	<com.matji.sandwich.widget.title.CompletableTitle
		android:id="@id/Titlebar"
		style="@style/DefaultWidthFill" />
	<ScrollView
		android:id="@+id/register_write_scroll"
		style="@style/DefaultFill"
		android:scrollbarFadeDuration="1988"
		android:layout_below="@id/Titlebar">
		<RelativeLayout
			style="@style/DefaultFill"
			android:padding="@dimen/default_distance">
			<TextView
				android:id="@+id/register_write_email"
				style="@style/DefaultWrap"
				android:text="@string/register_write_email"
				android:textSize="@dimen/register_subtitle_size"
				android:textColor="@color/matji_chocolate"
				android:layout_marginBottom="@dimen/register_margin_bottom" />
			<EditText
				android:id="@+id/register_email_field"
				style="@style/DefaultWidthFill"
				android:hint="@string/hint_email"
				android:singleLine="true"
				android:textSize="@dimen/default_edit_text_size"
				android:background="@drawable/input_box_square"
				android:layout_below="@id/register_write_email" />
			<TextView
				android:id="@+id/register_write_nickname"
				style="@style/DefaultWrap"
				android:text="@string/register_write_nickname"
				android:textSize="@dimen/register_subtitle_size"
				android:textColor="@color/matji_chocolate"
				android:layout_marginTop="@dimen/register_margin_top"
				android:layout_marginBottom="@dimen/register_margin_bottom"
				android:layout_below="@id/register_email_field" />
			<EditText
				android:id="@+id/register_nickname_field"
				style="@style/DefaultWidthFill"
				android:hint="@string/hint_nickname"
				android:singleLine="true"
				android:textSize="@dimen/default_edit_text_size"
				android:background="@drawable/input_box_square"
				android:layout_below="@id/register_write_nickname" />
			<TextView
				android:id="@+id/register_write_password"
				style="@style/DefaultWrap"
				android:text="@string/register_write_password"
				android:textSize="@dimen/register_subtitle_size"
				android:textColor="@color/matji_chocolate"
				android:layout_marginTop="@dimen/register_margin_top"
				android:layout_marginBottom="@dimen/register_margin_bottom"
				android:layout_below="@id/register_nickname_field" />
			<LinearLayout
				android:id="@+id/register_password_field_wrapper"
				style="@style/DefaultWidthFill"
				android:background="@drawable/input_box_square"
				android:orientation="vertical"
				android:padding="@dimen/default_divider_size"
				android:layout_below="@id/register_write_password">
				<EditText
					android:id="@+id/register_password_field"
					style="@style/DefaultWidthFill"
					android:background="@null"
					android:padding="@dimen/default_distance_half"
					android:hint="@string/hint_password"
					android:singleLine="true"
					android:password="true"
					android:textSize="@dimen/default_edit_text_size" />
				<View
					style="@style/HorizontalLine" />
				<EditText
					android:id="@+id/register_password_confirm_field"
					style="@style/DefaultWidthFill"
					android:background="@null"
					android:padding="@dimen/default_distance_half"
					android:hint="@string/hint_password_confirm"
					android:singleLine="true"
					android:password="true"
					android:textSize="@dimen/default_edit_text_size" />
			</LinearLayout>
			<RelativeLayout
				android:id="@+id/register_acceptance_of_terms"
				style="@style/settings_Row"
				android:background="@drawable/txtbox_selector"
				android:layout_marginTop="@dimen/register_margin_top"
				android:layout_below="@id/register_password_field_wrapper">
				<TextView
					android:id="@+id/register_acceptance_of_terms"
					style="@style/DefaultWrap"
					android:text="@string/register_acceptance_of_terms"
					android:textSize="@dimen/settings_content_size"
					android:textColor="@color/matji_gray"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true" />
				<TextView
					android:id="@+id/register_view_acceptance_of_terms"
					style="@style/DefaultWrap"
					android:text="@string/register_view_acceptance_of_terms"
					android:textSize="@dimen/register_subtitle_size"
					android:textColor="@color/matji_chocolate"
					android:layout_centerVertical="true"
					android:layout_toRightOf="@id/register_acceptance_of_terms"
					android:layout_toLeftOf="@+id/register_acceptance_of_terms_check" />
				<CheckBox
					android:id="@id/register_acceptance_of_terms_check"
					style="@style/DefaultWrap"
					android:background="@drawable/btn_check_label_background"
					android:button="@drawable/icon_check_selector"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true" />
			</RelativeLayout>

			<Button
				android:id="@+id/register_btn"
				android:layout_width="@dimen/settings_logout_btn_width"
				android:layout_height="@dimen/settings_logout_btn_height"
				android:shadowRadius="1"
				android:text="@string/register_complete"
				android:textColor="@color/matji_white"
				android:textSize="@dimen/settings_logout_btn_txt_size"
				android:shadowColor="@color/settings_logout_btn_txt_shadow"
				android:shadowDy="-1.3"
				android:background="@drawable/btn_yellow"
                android:layout_marginTop="@dimen/register_margin_top"
				android:layout_centerHorizontal="true"
				android:layout_below="@id/register_acceptance_of_terms" />
		</RelativeLayout>
	</ScrollView>
</RelativeLayout>