<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activity_find_password"
	style="@style/DefaultFill"
	android:background="@drawable/bg_01">
	<com.matji.sandwich.widget.title.HomeTitle
		android:id="@id/Titlebar"
		style="@style/DefaultWidthFill" />
	<LinearLayout
		android:id="@+id/find_password_wrapper"
		style="@style/DefaultWidthFill"
		android:orientation="vertical"
		android:padding="@dimen/default_distance"
		android:layout_below="@id/Titlebar">
		<TextView
			android:id="@+id/find_password_email"
			style="@style/DefaultWrap"
			android:text="@string/find_password"
			android:textSize="@dimen/register_subtitle_size"
			android:textColor="@color/matji_chocolate"
			android:layout_marginBottom="@dimen/register_margin_bottom" />
		<EditText
			android:id="@+id/find_password_email_field"
			style="@style/DefaultWidthFill"
			android:hint="@string/hint_email"
			android:imeOptions="actionDone"
			android:inputType="textEmailAddress"
			android:singleLine="true"
			android:textSize="@dimen/default_edit_text_size"
			android:background="@drawable/input_box_square" />

		<TextView
			style="@style/DefaultFill"
			android:background="@drawable/input_box_rounding"
			android:gravity="center"
			android:text="@string/find_password_email"
			android:textSize="@dimen/edit_guide_size"
			android:textColor="@color/matji_orange"
			android:layout_marginTop="@dimen/default_distance" />
	</LinearLayout>
	<LinearLayout
		style="@style/DefaultWidthFill"
		android:orientation="vertical"
		android:padding="@dimen/default_distance"
		android:layout_below="@id/find_password_wrapper">
		<TextView
			android:id="@+id/find_email"
			style="@style/DefaultWrap"
			android:text="@string/find_email"
			android:textSize="@dimen/register_subtitle_size"
			android:textColor="@color/matji_chocolate"
			android:layout_marginBottom="@dimen/register_margin_bottom" />
		<EditText
			android:id="@+id/find_email_userid_field"
			style="@style/DefaultWidthFill"
			android:hint="@string/hint_userid"
			android:inputType="textEmailAddress"
			android:singleLine="true"
			android:textSize="@dimen/default_edit_text_size"
			android:background="@drawable/input_box_square" />

		<TextView
			style="@style/DefaultFill"
			android:background="@drawable/input_box_rounding"
			android:gravity="center"
			android:text="@string/find_email_userid"
			android:textSize="@dimen/edit_guide_size"
			android:textColor="@color/matji_orange"
			android:layout_marginTop="@dimen/default_distance" />
	</LinearLayout>
</RelativeLayout>
