<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:id="@+id/layout_main">
  <RelativeLayout
      android:id="@+id/activity_bookmark_list_register_wrap"
      android:layout_alignParentTop="true"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content">
        <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:text="@string/default_string_edit" />
        <Button
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:onClick="onRegisterBookmarkClick"
	    android:id="@+id/register_button"
	    android:text="@string/bookmark_list_register" />
	<RelativeLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_below="@id/register_button"
	    android:id="@+id/register_desc_wrap"
	    android:visibility="gone">
	  <EditText
	      android:layout_width="270dp"
	      android:layout_height="wrap_content"
	      android:layout_alignParentLeft="true"
	      android:id="@+id/register_desc"
	      android:singleLine="true"
	      android:inputType="text"
	      android:hint="@string/bookmark_list_register_hint" />
	  <Button
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignParentRight="true"
	      android:onClick="onRegisterSubmitClick"
	      android:text="@string/default_string_confirm" />
	</RelativeLayout>
  </RelativeLayout>
  <com.matji.sandwich.widget.BookmarkListView
      style="@style/DefaultFill"
      android:focusable="false"
      android:layout_below="@id/activity_bookmark_list_register_wrap"
      android:background="@color/transparent"
      android:id="@+id/bookmark_list" />
</RelativeLayout>