<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/activity_user_password_edit"
	android:background="@drawable/bg_02"
	style="@style/DefaultFill">
	<com.matji.sandwich.widget.title.CompletableTitle
		android:id="@id/Titlebar"
		style="@style/DefaultWidthFill" />
	<RelativeLayout
		style="@style/DefaultFill"
		android:padding="@dimen/default_distance"
		android:layout_below="@id/Titlebar">
		<EditText
			android:id="@+id/user_current_password_field"
			style="@style/DefaultWidthFill"
			android:hint="@string/hint_current_password"
			android:singleLine="true"
			android:password="true"
			android:background="@drawable/input_box_square" />
		<EditText
			android:id="@+id/user_new_password_field"
			style="@style/DefaultWidthFill"
			android:hint="@string/hint_write_password"
			android:singleLine="true"
			android:password="true"
			android:background="@drawable/input_box_square"
			android:layout_below="@id/user_current_password_field" />
		<EditText
			android:id="@+id/user_new_password_confirm_field"
			style="@style/DefaultWidthFill"
			android:hint="@string/hint_password_confirm"
			android:singleLine="true"
			android:password="true"
			android:background="@drawable/input_box_square"
			android:layout_below="@id/user_new_password_field" />
	</RelativeLayout>
</RelativeLayout>